# minicrates

./: Cargo.toml  README.md
example/: Cargo.toml  Minicrates.toml  build.rs
example/story/: a-start.mini.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: build_script.rs  lib.rs
