[package]
name = "minicrates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
glob = "0.3.1"
indicatif = "0.17.3"
serde = { version = "1.0.154", features = ["derive"] }
toml = "0.7.2"

[workspace]
members = ["example", "example/foundation"]
